# EmoParse

./: .env.example  .gitignore  LICENSE  README.md  arquitectura_modular.md  config.example.yaml  config.yaml  ini.bat  iniciar_proyecto.bat  main.ipynb  pyproject.toml  requirements-dev.txt  requirements.txt
.ipynb_checkpoints/: README-checkpoint.md  Untitled-checkpoint.ipynb  main-checkpoint.ipynb
_prueba/_exports/: discursos.csv  emociones.csv  frases.csv
_prueba/data/: prueba.csv
benchmarks/: README.md  bench_pipeline.py
data/: .~lock.casarosada.csv#  A1. discursos.csv  A2. discursos_filtrado.csv  A3. discursos_preprocesado.csv  A4. discursos_resumenes.csv  A5. discursos_metadatos.csv  A6. discursos_enunciacion.csv  B1. recortes.csv  B2. recortes_filtrado.csv  B3a. recortes_preprocesado.csv  C1. actores_identificados.csv  C1. actores_identificados_checkpoint.csv  C2. actores_validos.csv  C3. actores_excluidos.csv  D1. emociones_identificadas.csv  D1. emociones_identificadas_actores.csv  D1. emociones_identificadas_enunciador.csv  D1. emociones_identificadas_enunciatarios.csv  D2. emociones_caracterizadas.csv  casarosada_2.csv  dominancia.csv  foria.csv  fuente.csv  intensidad.csv  mastodon.jsonl  prueba_1.csv  recortes_prueba.csv
data/.ipynb_checkpoints/: A1. discursos-checkpoint.csv  A2. discursos_filtrado-checkpoint.csv  A3. discursos_preprocesado-checkpoint.csv  A4. discursos_resumenes-checkpoint.csv  A5. discursos_enunciacion-checkpoint.csv  A5. discursos_metadatos-checkpoint.csv  A6. discursos_enunciacion-checkpoint.csv  B1. recortes-checkpoint.csv  B2. recortes_filtrado-checkpoint.csv  B3b. recortes_preprocesado_10-checkpoint.csv  C1. actores_identificados-checkpoint.csv  C1. actores_identificados_checkpoint-checkpoint.csv  C2. actores_validos-checkpoint.csv  D1. emociones_identificadas_actores-checkpoint.csv  D1. emociones_identificadas_enunciador-checkpoint.csv  D1. emociones_identificadas_enunciatarios-checkpoint.csv  D2. emociones_caracterizadas_enunciador-checkpoint.csv  D2. emociones_caracterizadas_enunciatarios-checkpoint.csv  D3. emociones_completo-checkpoint.csv  foria-checkpoint.csv  fuente-checkpoint.csv
data/ejemplos/: control_neutro.csv  tuits_ejemplo.jsonl
docs/: index.html
errors/: errores_actores_persistentes.jsonl  errores_identificar_actores_intento1.jsonl  errores_persistentes.jsonl
errors/.ipynb_checkpoints/: errores_actores_persistentes-checkpoint.jsonl  errores_enunciacion-checkpoint.jsonl  errores_identificar_actores-checkpoint.jsonl  errores_metadatos-checkpoint.jsonl  errores_persistentes-checkpoint.jsonl
evals/: manual_anotacion.md
evaluation/: prueba_1_diff_pass2.csv  prueba_1_diff_pass2_exc_eq.csv
evaluation/gold/: equivalencias.json  exp_equivalencias.json  gold.csv
evaluation/mini-benchmark/: comparacion_modelos_pass2.md
evaluation/scripts/: audit.py  eval_against_gold.py
install/: check_gpu.py  configure_runtime.py  download_models.py  install.sh  recommend_models.py
knowledge/: actors_kb.json  actors_kb.json.bak.20260611T035657Z  actors_kb.json.bak.20260613T193724Z  actors_kb.json.bak.20260613T200731Z  actors_kb.json.bak.20260613T202640Z  actors_kb.json.bak.20260613T202933Z  actors_kb.json.bak.20260613T204014Z  actors_kb.json.bak.20260613T204636Z  actors_kb.json.bak.20260613T204716Z  actors_kb.json.bak.20260613T204753Z  actors_kb.json.bak.20260613T205011Z  actors_kb.json.bak.20260613T205052Z  actors_kb.json.bak.20260613T222419Z  actors_kb.json.bak.20260614T082045Z  actors_kb.json.bak.20260614T082113Z  actors_kb.json.bak.20260614T082533Z  caracterizacion_unificada.json  colectivos.json  configuraciones_emocion.json  dominancia.json  emociones_ontologia.json  emoji_afecto.json  intensidad.json  referentes_kb.json  referentes_kb.json.bak  semas.json  tipos_discurso.json
knowledge/heuristicas/: actants.md  actors.md  characterizer.md  emoji.md  emotions.md  emotions_pass2.md  enunciation.md  hashtags.md  judge.md  reframing.md
knowledge/heuristics/: foria.txt  inferencia_emociones.txt  intensidad.txt
logs/: codigos_eliminados.txt
logs/.ipynb_checkpoints/: codigos_eliminados-checkpoint.txt
modulos/: caracterizacion_emociones.py  clasificacion_emocional.py  deteccion_emociones.py  driver_utils.py  enunciacion.py  experienciador.py  exportador.py  extraccion_fragmentos.py  foria_dominancia.py  fuente_emocional.py  identificacion_actores.py  intensidad.py  metadatos.py  modelo.py  modo_existencia.py  orquestador.py  parsers.py  paths.py  postprocesamiento_actores.py  preprocesamiento.py  prompts.py  recursos.py  reprocesamiento.py  reprocesamiento_emociones.py  resumen.py  schemas.py  scraping_utils.py  tipos_discurso.py  utils_io.py  webscraping.py
modulos/.ipynb_checkpoints/: caracterizacion_emociones-checkpoint.py  deteccion_emociones-checkpoint.py  enunciacion-checkpoint.py  identificacion_actores-checkpoint.py  preprocesamiento-checkpoint.py
modulos/heuristicas/: dominancia.txt  fuente.txt  inferencia_emociones.txt
modulos/ontologia/: actores.json  emociones.json  foria.json  fuente.json
modulos/prompts/: identificar_actores.txt  resumir_discurso.txt  resumir_fragmento.txt  validar_actores.txt
retry_policies/: emotions.yaml  emotions_pass2.yaml
runs/: _test_p2.sqlite  prueba_1.sqlite  prueba_2.sqlite  prueba_3.sqlite  test_p2.sqlite
src/emoparse/: __init__.py  __main__.py  version.py
tests/: conftest.py
tests/integration/: conftest.py  test_backend_llamacpp.py  test_full_pipeline.py  test_pipeline_end_to_end.py
tests/unit/: test_acquisition.py  test_actantes_schema.py  test_actants_agent.py  test_actors_agent.py  test_actors_kb_decisions.py  test_actors_kb_discoveries_repo.py  test_agents_batch_size_override.py  test_app_data.py  test_base_agent.py  test_base_agent_retry.py  test_base_batch_agent.py  test_cache_backend.py  test_cache_keys.py  test_cache_repository.py  test_caracterizacion_schema_tier1.py  test_characterizer_agent.py  test_characterizer_includes_tier1.py  test_cli.py  test_cli_export.py  test_config.py  test_deixis.py  (+60 more)
tutorial/: tutorial_discurso_presidencial.md
(+256 files in other folders)
